adding meta info

--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -1,3 +1,4 @@
 {
-  "siteName": "Rīgas Hanzas vidusskola"
+  "siteName": "Rīgas Hanzas vidusskola",
+  "metaDesc": "Šādi izskatās ērta, piekļūstama skolas mājas lapa"
 }
